force-app/main/default/objects/PrivacyPolicyCountry__mdt/PrivacyPolicyCountry__mdt.object-meta.xml
<CustomObject>
    <description>Configuration of Privacy Policy on per country basis with title text and body text on native language and translation to international English language.</description>
    <label>Privacy Policy Country</label>
    <pluralLabel>Privacy Policy Countries</pluralLabel>
</CustomObject>