force-app/main/default/objects/PrivacyPolicyCountry__mdt/fields/Body_English__c.field-meta.xml
<CustomField>
    <fullName>Body_English__c</fullName>
    <label>Body_English</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>