force-app/main/default/objects/PrivacyPolicyCountry__mdt/fields/CountryIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CountryIsoCode__c</fullName>
    <label>Country Iso Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>