force-app/main/default/objects/PrivacyPolicyCountry__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>