force-app/main/default/objects/PrivacyPolicyCountry__mdt/fields/Title_English__c.field-meta.xml
<CustomField>
    <fullName>Title_English__c</fullName>
    <label>Title_English</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>