force-app/main/default/objects/PrivacyPolicyCountry__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CountryIsoCode__c</columns>
    <columns>TimeZone__c</columns>
    <columns>Title__c</columns>
    <columns>Title_English__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>